--- a/storage/pages/zcDetail/zcDetail.wxml
+++ b/storage/pages/zcDetail/zcDetail.wxml
@@ -5,7 +5,7 @@
       <swiper class="swiper-hd" indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}" indicator-color="#888" indicator-active-color="#fff">
         <block wx:for="{{item.goods_show_images}}" wx:key="">
           <swiper-item>
-            <image src="{{item}}" class="slide-image" width="355" height="150" />
+            <image src="{{item}}" class="slide-image" />
           </swiper-item>
         </block>
       </swiper>
