--- a/storage/pages/realtime_data/realtime_data.wxml
+++ b/storage/pages/realtime_data/realtime_data.wxml
@@ -4,10 +4,10 @@
         实时数据
     </view>
     <view class="swiper-tab-item {{currentTab==1?'active':''}}" data-current="1" bindtap="clickTab">
-        24小时指标
+        历史数据
     </view>
     <view class="swiper-tab-item {{currentTab==2?'active':''}}" data-current="2" bindtap="clickTab">
-        历史数据
+        对比数据
     </view>
 </view>
 <swiper class="swiper-container" current="{{currentTab}}" duration="300" bindchange="swiperTab">
@@ -63,9 +63,7 @@
                         <view style="flex:1;"></view>
                         <view style="font-size: 18px;color: #70B603;">28℃</view>
                     </view>
-                    <view class="tips" bind:tap="close" >
-                        小贴士：为什么要选择专业仓储？
-                    </view>
+                    <view class="tips" bind:tap="close">小贴士：为什么要选择专业仓储？</view>
                 </view>
             </view>
             <view class="temp-echarts">
@@ -82,20 +80,6 @@
                         <view style="font-size: 18px;color: #F3880C;">65%</view>
                     </view>
                 </view>
-            </view>
-        </view>
-    </swiper-item>
-    <swiper-item class="overflowYauto" catchtouchmove="bindswipermove">
-        <view style="flex:1; display: flex;flex-direction: column;  overflow: auto;">
-            <view class="temp-echarts" style="width:98%;margin:auto;">
-                <view style="text-align:center;font-weight:700;margin-top:15rpx;">温度（℃）</view>
-                <ec-canvas id="mychart-five" canvas-id="mychart-multi-five" ec="{{ ecOne }}"></ec-canvas>
-                <!-- <view class="text">温度℃</view> -->
-            </view>
-            <view class="temp-echarts" style="width:98%;margin:auto;">
-                <view style="text-align:center;font-weight:700;margin-top:15rpx;">湿度（%）</view>
-                <ec-canvas id="mychart-six" canvas-id="mychart-multi-six" ec="{{ ecOne }}"></ec-canvas>
-                <!-- <view class="text">温度℃</view> -->
             </view>
         </view>
     </swiper-item>
@@ -135,13 +119,29 @@
             </view>
         </view>
     </swiper-item>
+    <swiper-item class="overflowYauto" catchtouchmove="bindswipermove">
+        <view style="flex:1; display: flex;flex-direction: column;  overflow: auto;">
+            <view class="temp-echarts" style="width:98%;margin:auto;">
+                <view style="text-align:center;font-weight:700;margin-top:15rpx;">温度（℃）</view>
+                <ec-canvas id="mychart-five" canvas-id="mychart-multi-five" ec="{{ ecOne }}"></ec-canvas>
+                <!-- <view class="text">温度℃</view> -->
+            </view>
+            <view class="temp-echarts" style="width:98%;margin:auto;">
+                <view style="text-align:center;font-weight:700;margin-top:15rpx;">湿度（%）</view>
+                <ec-canvas id="mychart-six" canvas-id="mychart-multi-six" ec="{{ ecOne }}"></ec-canvas>
+                <!-- <view class="text">温度℃</view> -->
+            </view>
+        </view>
+    </swiper-item>
 </swiper>
 <view class="dialog" wx:if="{{isTips}}">
     <view class="dialog-box" style="">
         <view class="main-title">小贴士</view>
-        <text class="main-text" decode="{{true}}" space="{{true}}">&nbsp;&nbsp;&nbsp;&nbsp;为什么要选择专业仓储？一般来说普洱茶存茶湿度不可过高，也不可过于干燥。湿度过高，容易让茶叶变质、长霉并且口感变差，滋味变淡薄，香气不扬，环境温度过低，同样不利于茶叶的储存转化！；过于干燥，茶叶转化又会太慢，并且容易出现油味。 这样的茶品，无论是关于健康上或是品饮口感上，都不建议饮用。</text>
+        <text class="main-text" decode="{{true}}" space="{{true}}">
+            &nbsp;&nbsp;&nbsp;&nbsp;为什么要选择专业仓储？一般来说普洱茶存茶湿度不可过高，也不可过于干燥。湿度过高，容易让茶叶变质、长霉并且口感变差，滋味变淡薄，香气不扬，环境温度过低，同样不利于茶叶的储存转化！；过于干燥，茶叶转化又会太慢，并且容易出现油味。 这样的茶品，无论是关于健康上或是品饮口感上，都不建议饮用。
+        </text>
     </view>
     <view style="margin-top:50rpx">
-      <view class="close" bind:tap="close">×</view> 
+        <view class="close" bind:tap="close">×</view>
     </view>
 </view>
