--- a/storage/pages/realtime_data/realtime_data.wxml
+++ b/storage/pages/realtime_data/realtime_data.wxml
@@ -123,19 +123,20 @@
         <view class="house-main">
             <view class="sel-title">选择仓库</view>
             <block wx:for="{{houseList}}" wx:key="index">
-                <view class="house-name" data-id="{{item.instrument_number}}">{{item.store_name}}</view>
+                <view class="house-name {{item.isSel? 'isSel':''}}" data-id="{{item.instrument_number}}" data-index="{{index}}" data-type="1" bindtap="selHouse">{{item.store_name}}</view>
             </block>
         </view>
         <view class="house-main">
             <view class="sel-title">选择年份</view>
-            <view class="house-name">2019</view>
-            <view class="house-name">2020</view>
+             <block wx:for="{{yearArr}}" wx:key="index">
+                <view class="house-name {{item.isSel? 'isSel':''}}" data-id="{{item.year}}" data-index="{{index}}" data-type="2" bindtap="selHouse">{{item.year}}</view>
+            </block>
         </view>
         <view class="tips-box">
             <view class="house-tips">
                 注意：选择仓库，不选择年份，表示横向仓库实时对比数据，仓储色为绿，表示目前存茶仓，交叉选择表示，横向多仓库年份对比数据
             </view>
-            <view class="db-btn">开始对比</view>
+            <view class="db-btn" bindtap="startDb">开始对比</view>
         </view>
         <view class="line"></view>
         <view style="flex:1; display: flex;flex-direction: column;  overflow: auto;">
