--- a/storage/pages/realtime_data/realtime_data.wxss
+++ b/storage/pages/realtime_data/realtime_data.wxss
@@ -43,3 +43,4 @@ swiper.swiper-container{min-height: 1020rpx; flex: 1;}
 .db-btn{width: 180rpx;text-align: center;color: #fff;background-color: red;line-height: 50rpx;margin: 0 5rpx;}
 .line{background-color: rgba(242, 242, 242, 1);height: 5px;width: 95%;margin: 0 20rpx;}
 .isSel {color: #669900;}
+/* .extraCssText{z-index: 9999;} */
