--- a/storage/pages/realtime_data/realtime_data.wxml
+++ b/storage/pages/realtime_data/realtime_data.wxml
@@ -110,10 +110,10 @@
                 </view>
             </view>
             <view style="flex: 1; display: flex; flex-direction: column; overflow: auto;">
-                <view class="temp-echarts" style="height: 500rpx;">
+                <view  style="height: 500rpx;flex:1;width:700rpx;">
                     <ec-canvas id="mychart-three" canvas-id="mychart-multi-three" ec="{{ ecThree }}"></ec-canvas>
                 </view>
-                <view class="temp-echarts" style="height: 500rpx;">
+                <view  style="height: 500rpx;flex:1;width:700rpx;">
                     <ec-canvas id="mychart-four" canvas-id="mychart-multi-four" ec="{{ ecFour }}"></ec-canvas>
                 </view>
             </view>
