--- a/pages/buy/buy.wxml
+++ b/pages/buy/buy.wxml
@@ -10,7 +10,7 @@
       </view>
       <checkbox-group bindchange="checkboxChange">
         <view wx:for='{{goodList}}' class="goodList" wx:key="{{index}}">
-          <view class='content_list'>
+          <view class='content_list' style="{{index == 0 ? 'margin-top:0px;':''}}">
             <view class='radio'>
               <checkbox value="{{item.id}}" color='#fff' checked="{{item.checked}}" />
             </view>
